--- a/index.html
+++ b/index.html
@@ -890,6 +890,169 @@
       </div>
     </details>
 
+    <!-- ------------------------------------ WEEK 5 ---------------------------------------------- -->
+
+    <details class="week" id="week-5">
+      <summary>Week 5</summary>
+      <div class="week-content">
+        <h3>Reflection</h3>
+        <p>
+          There was no class this week so nothing I can write for in class
+          learning, but I am writing more reflective writing in the research
+          section to make up for it!
+        </p>
+        <h3>Academic Research</h3>
+        <p>
+          I did some research in collaboration in creative audio communities,
+          and found this article by Calefato, Lanubile, Novielli and Valetto,
+          titled "Collaboration success factors in an online music community".
+          It talks about successfull collaboration depends on momentum,
+          recognition, and individual contributions for the project. This really
+          helped me figure out a way to interact with the people I am
+          collaborating with, changing my mindset into a more professional one
+          and some tips on how to make the collaboration successful. The article
+          made me consider how my sound design interacts with their creative
+          vision, rather than just being a seperate entity. Since the
+          collaborative works I am working on are majorly for someone elses
+          creative visual work, it is important to keep a line of communication
+          open, while also figuring out on creating a balance of what the
+          collaborator wants, as well as putting my own creative vision into the
+          work. I also found that receiving feedback and adjusting drafts was
+          not only about fixing mistakes, but also creating cintinuity with the
+          animators intention for the work. I also noted that some collaborative
+          practices could be helpful in my own solo projects, for example,
+          creating a variety of drafts to see which I like better, rather than
+          continuously working on the same project to see if I'll end up liking
+          it. The article really helped me develop this mindset of openness and
+          responsiveness that could definitely imrpove both group and individual
+          projects.
+          <br />
+          <br />
+          I read another article titled "Footsteps with character: The art and
+          craft of Foley" written by Wright. It describes Foley as not just a
+          technical task to record sounds, but also a craft where sound
+          designers have the chance to add character and intention into ordinary
+          noises. This information will greatly help me in the future when I do
+          more intensive foley tasks. I have taken foley as just a task that I
+          needed to tick off before I start doing actual sound design work, but
+          this shifted my mindset into adding more intention with my recording.
+          I could experiment with textures and performance to transform regular
+          sounds into something that would fit hte emotional tone of the
+          project.
+          <br />
+          <br />
+          The last article I read is by Sonnenschein, "Sound design: The
+          expressive power of music, voice and sound effects in cinema". It
+          talks more deeply into creating atmosphere, and especially reverb and
+          other spacial effects can play a crucial role in establishing a
+          storytelling place and guides audience's emotional and perceptual
+          focus. This directly connects to by attempt to design the atmosphere
+          of a church which is a setting in one of the animations I am working
+          on. In my draft, I leaned heavily of reverb to create a sense of
+          scale, but after reading this, I realize I might have prioritized size
+          over clarify of my work. Sonnenschein'd discussion of how sound
+          environments shoould evolve dynamically made me think of reverb as
+          something I should modulate and change across scenes, which I will
+          definitely keep in mind for the future scenes of the animation.
+          <br />
+          <br />
+        </p>
+        <h3>Artistic Research</h3>
+        <p>
+          Ben Burtt, who is best known for his work in Star Wars, is a foley
+          artist that I looked into this week. He invented the sounds which have
+          become icons in culture, and he approached it by using unexpected
+          sources for sound. He shows that sound design is about creativity, not
+          just accuract. I realized I could adopt a similar mindset for my own
+          foley work. For example, instead of trying to find the most accurate
+          footstep in the animation I'm working, I could isntead try to find a
+          sound that could convey the weight and unease and tension in that
+          moment. Burtt;s practive reminds me that emotional believability is
+          also an important factor to consider, rather than just realism. I want
+          to explore more freely with Foley in my upcoming projects so they can
+          carry the sound I want it to express.
+          <br />
+          <br />
+          Chris Watson is another foley artist that mainly captures amazing
+          natural soundscapes with amazing detail and is often used in nature
+          documentaries. His work shows how sound can transport a listener into
+          the place and immerse them in its atmosphere, even without visuals.
+          This pushes me to think of environmental sounds not just as background
+          noise, but the backbone of the scene. I realize I should listen and
+          put more intention in the ambience that I create, experimenting with
+          layers of tone, resonance and silence. I want to to make a mix that
+          tries to capture a living environment, and shape how the audience can
+          feel inside that space.
+          <br />
+          <br />
+          The last artist I looekd into was Suzanne Ciani, who makes electronic
+          soundscapes using synthesizers to design immersive textures! She
+          created electronic sounds for Atari and Coca Cola ads and was a
+          pioneer with proving how synthetic audio could feel tactile and human.
+          I really like her ability to make electronic tones sound like they
+          have so much character and movement. I would like to see how I could
+          experiment with this in the future, maybe in the game I am designing
+          the sound for.
+          <br />
+          <br />
+        </p>
+        <h3>Technical Research</h3>
+        <p>...</p>
+        <h3>Progress Report</h3>
+        <p>
+          I was very busy this week again with my flight and then had a trip to
+          the emergency room (I am fine!) but I was able to get a draft down for
+          the animation 'The Reconnect'. Caroline the animator sent me the first
+          scene of her animation and sent me a little brief as well as what
+          sounds she imagined for that scene.
+          <br />
+          <br />
+          She mentioned footsteps playing a main role in the animation, so I
+          started with that. It was a bit tedious to get the timing right but I
+          got it in the end. I layered a clip of wood creaking, as well as
+          isolated footsteps so the individual footsteps would be a bit clearer
+          and wouldn't get drowned in the creaking noise. Since the setting of
+          this scene was in a church, I did some pretty spacious reverb to get
+          that wide sound, and put the wetness lower for the isolated footsteps,
+          again to be a bit more clear. Since there were 2 pairs of footsteps, I
+          made the closer ones with a bit less space and delay, so the listeners
+          can differentiate them, as well as they are in a more walled off area
+          than the other character.
+          <br />
+          <br />
+          <img src="photos/week5/1.png" alt="" />
+          <br />
+          <br />
+          I then went and layered a few horror ambiences, trying to focus on
+          having the full frequency range in the scene. I did some low humming
+          drones, a creepy airy atmosphere sound, as well as a high pitched
+          chimes to add to that creepy atmosphere. I also tried to experiment
+          with a sample of a choir singing, and pitching that around, but I'm
+          not sure if that vision is what the animator wanted, so I've sent her
+          varying sound design works to see which one she likes the best.
+          <br />
+          <br />
+          <img src="photos/week5/2.png" alt="" />
+          <br />
+          <br />
+          Finally I added some finishing touches! I added a heartbeat which I
+          automated to get increasing louder and faster to help build tension. I
+          also added a riser near the end to accompany the buildup of the rising
+          heartbeat. Other than that, I added a few shaky breaths of both the
+          person dying at the start, as well as another shaky breath when the
+          girl sees the scene and gets scared.
+          <br />
+          <br />
+          You can watch the first draft
+          <a href="https://youtu.be/bs8I764QiyE">here</a>! I think a bit of the
+          ambience is lacking, I think I could have made it a bit more
+          expansive. Caroline mentioned she wanted it to be "witchy" but I am
+          not sure how to achieve that so I will be sure to ask her then add it
+          to the second draft! I'm excited to hear the feedback for this draft.
+        </p>
+      </div>
+    </details>
+
     <!-- ------------------------------------ FUTURE WEEKS TEMPLATE ---------------------------------------------- -->
 
     <!-- <details class="week" id="week-4">
