--- a/index.html
+++ b/index.html
@@ -997,7 +997,41 @@
           <br />
         </p>
         <h3>Technical Research</h3>
-        <p>...</p>
+        <p>
+          This week I just researched how to record good foley, taking
+          inspiration from professional foley artists.
+          <a href="https://www.youtube.com/watch?v=amNxmSVYc34">This</a> video
+          explores how professionals get ready and set up for recording, with
+          most of the work before the actual recording date. Whenever I look at
+          doing foley recordings I always just grab a microphone and look at the
+          list of things I need, which gets the job done, but I noticed not as
+          well as I hoped. From this video I saw that they have a specific
+          recording schedule, packed with information like what props will be
+          needed, the duration needed, where the recording will be held, etc. In
+          the future I want to be more organized with my shooting schedule,
+          similar to this so I know what exactly I need without just winging it.
+          <br />
+          <br />
+          For the actual recording they had a few helpful tips that I will use
+          in my future foley recording sessions. I tend to just make generic
+          sounds and manipulate it to fit the scene later, especially if it's
+          something generic like clothes rustling or such, but I see the benefit
+          in actually recording while watching the visuals. It seems like such a
+          simple thing, but because I don't have a studio and I tend to record
+          everything myself, I find it difficult to put a screen down where I
+          can see the visuals of what I'm recording, but still holding up the
+          microphone (since I don't own a stand) and also making the sound
+          needed. In the future I will probably ask for some help, or at least
+          borrow a mic stand to make it easier on myself.
+          <br />
+          <br />
+          The video also talks a lot about how certain sounds can be scarily
+          close to other sounds. The famous example of pan frying bacon sounding
+          like rain is a prime example of this. I want to be more creative with
+          my ideas, and not be such a purist when it comes to sounds, as I tend
+          to like recording the exact same sound that is in the film, even if
+          there could be an easier version.
+        </p>
         <h3>Progress Report</h3>
         <p>
           I was very busy this week again with my flight and then had a trip to
@@ -1050,6 +1084,235 @@
           not sure how to achieve that so I will be sure to ask her then add it
           to the second draft! I'm excited to hear the feedback for this draft.
         </p>
+      </div>
+    </details>
+
+    <!-- ------------------------------------ WEEK 6 ---------------------------------------------- -->
+
+    <details class="week" id="week-6">
+      <summary>Week 6</summary>
+      <div class="week-content">
+        <h3>Reflection</h3>
+        <p>
+          This week in class we analysed the opening sequence of A Bug’s Life in
+          three different times, one with effects only, music only, and then the
+          combined track. Watching the film with only effects highlighted just
+          how minimal yet purposeful the sound design is. The crickets, wind,
+          and water effects built a naturalistic atmosphere, while footsteps
+          were much heavier than I initially expected, maybe I expected it to be
+          lighter because they were ants! That weight gave the characters a
+          tangible presence and energy within the scene. I actually was shocked
+          with how little effects were used. I alsways assumed there was more,
+          but maybe because it is a children's animated film, it would have less
+          than something recorded with real actors and such. I noticed how many
+          environmental sounds faded away whenever the characters returned to
+          focus, suggesting that hierarchy in the mix is used deliberately to
+          guide attention.
+          <br />
+          <br />
+          When listening to the music track separately, it revealed how much it
+          shapes the emotional soundscape. There were stings placed on small
+          visual actions, like the bass note hitting when the ant is struck by a
+          falling fruit. At other times the score helped the flow of the
+          narrative, for example when everything is calm, the melody was light
+          and playful, but when problems emerged the bass slowed and thickened,
+          and the music grew louder to match the threatening buzz of a chainsaw.
+          <br />
+          <br />
+          Hearing both together showed how layers of sound work across the
+          frequency spectrum. Music filled the higher registers while the foley
+          sat lower, producing a more complete sense of space. What stood out
+          most to me was how much character movement can be conveyed through
+          sound alone, like their clumsiness, confidence, and awkwardness were
+          all suggested simply by timing and emphasis. The exercise reminded me
+          that sound is not just accompaniment to visuals, but a central force
+          that defines mood, guides attention, and can even reshape how we
+          interpret characters and their behaviors.
+          <br />
+          <br />
+        </p>
+        <h3>Academic Research</h3>
+        <p>
+          I read an article by Philipp Schmerheim and Tobias Kurwinkel titled
+          "Sound Design in Children’s Film". It explains how sound in children’s
+          media can play a crucial role in guiding perception, since younger
+          audiences often rely on audio cues more than visual details to
+          understand what is happening in scenes. The article pointed out how
+          important it is to create a hierarchy of sounds so that key actions
+          are easy to follow without overwhelming the listener. This perspective
+          changed how I think about my own work, because I usually focus on
+          adding detail and texture, but this showed me that sometimes clarity
+          and restraint are more powerful, especially when designing for
+          children. I can apply this to my own work even if the content I'm
+          producing isn't really meant for children. I can do this by being more
+          deliberate about which sounds need to be in the foreground, and which
+          can fade back, ensuring that the main story always comes through
+          clearly.
+          <br />
+          <br />
+          I also read a scholarly reflection on sound design in contemporary
+          animated films such as Coraline, The Incredibles and Bolt. The article
+          compared how each film tailored its approach to sound design to suit
+          its genre and mood. Coraline used minimal soundscapes to create a
+          strange and unsettling atmosphere, while the other two relied on rich,
+          layered mixes to heighten the action and energy in scenes. What stood
+          out to me was the emphasis on clarity across all styles. This reminded
+          me that sound design should never be about filling space, but about
+          supporting the narrative with intention. I found this inspiring
+          because it encouraged me to think more flexibly, and allowing a
+          minimal approach to make a scene more effective, while at other times
+          layering multiple sounds can build intensity. In both cases, clarity
+          should remain the goal, and I want to carry that mindset into my
+          future projects, especially with my tendency to add too many sounds.
+        </p>
+        <h3>Artistic Research</h3>
+        <p>
+          For my artistic research, I decided to look into kids animated films
+          again, and I looked into the work of Randy Thom, who has done
+          extensive sound design for animated films including The Incredibles
+          and How to Train Your Dragon (which is one of my favorite animated
+          films of all time). Thom talks about how children’s films often
+          require a very careful balance between realism and exaggeration
+          assounds need to feel believable enough to anchor the world, but they
+          also have to be expressive and playful. For example, he often layers
+          real recordings with stylized or exaggerated effects to give everyday
+          actions more personality I can use this for my own work by designing
+          sound (especially if I ever do sound design for children's media) by
+          finding the right degree of clarity and character, rather than aiming
+          for complete realism. It made me realise that when I work on projects
+          with younger audiences in mind, and even older audiences, I should
+          think about sound as a way of storytelling on its own, where even
+          small effects can reveal emotion or intention.
+          <br />
+          <br />
+          I also decided to look into horror sound designers, and I found Gary
+          Rydstrom, who has worked on films like Jurassic Park and A Quiet
+          Place. Rydstrom describes horror sound design as being less about what
+          is heard and more about what is implied through silences, distant
+          rumbles, or subtle textures that can create more fear than overtly
+          loud sounds. He also notes how horror often uses low frequencies and
+          dynamic shifts in volume to keep audiences on edge, exploiting the
+          body’s physical reactions to sound. This made me reflect on how
+          different the goals of sound design can be across genres like where
+          children’s films need clarity and guidance, horror thrives on
+          ambiguity and tension. For my own projects, it pushes me to think
+          about silence and restraint as creative tools, and not just the sounds
+          themselves. By considering how audiences are meant to feel, I can
+          adapt my design strategies to match the emotional core of the genre.
+        </p>
+        <h3>Technical Research</h3>
+        <p>
+          This week I watched a tutorial on the fundamentals of EQ and how it
+          can be applied in sound design. The video explained how EQ isn't
+          really just about boosting or cutting frequencies to make something
+          sound better but about carving out space so each element in a mix can
+          be heard clearly. It broke down the frequency spectrum into ranges,
+          like sub-bass, low mids, high mids, and highs, and showed what
+          typically lives in each area. It kind of reminded me when I created
+          the sound design for Shelves by Gina Moore, when I was working with
+          orchestra. All the different instruments focus on different frequency
+          ranges to create this full sound! I just thought that was pretty cool
+          and linked together something I've done before to something I focused
+          learning this week.
+          <br />
+          <br />
+          I found it especially useful when he demonstrated how too much low-mid
+          energy can make a sound muddy, while carefully reducing those
+          frequencies can suddenly make a mix feel clearer. Reflecting on this,
+          I realised how often I tend to layer sounds without thinking about how
+          they overlap sonically, which can cause clutter. EQ gives me the
+          technical ability to separate those layers, making each one
+          purposeful. In my own projects, I definitely can see myself using EQ
+          to sculpt sounds to sit in their own space and highlighting the
+          qualities that make them expressive. I will definitely try this next
+          week for The Hollow Child draft.
+        </p>
+        <h3>Progress Report</h3>
+        <p>
+          This week I mainly did work on The Hollow Child animation! I had a
+          chat with the animator Tara in person, and we went scene by scene of
+          what her plans were, what she expected and gave us a timeline to have
+          the draft done next week! Which was kind of really quick for me which
+          is why this week I mainly only did this project.
+          <br />
+          <br />
+          Tara had hired voice actors for the different characters and sent us
+          the voice recordings for it, so the first thing I did was do the
+          timing for all the laughs and sounds for the ghost girl:
+          <br />
+          <br />
+          <img src="photos/week6/girl.png" alt="" />
+          <br />
+          <br />
+          There wasn't any actual dialogue or speaking, but there was a lot of
+          laughing and random sounds, so I really focused on making sure I
+          didn't miss anything. I then did the same for the werewolf:
+          <br />
+          <br />
+          <img src="photos/week6/werewolf2.png" alt="" />
+          <br />
+          <br />
+          It was pretty difficult in general because obviously the animation
+          isn't finished, so I don't think the timing will be correct, but it is
+          an easy fix and just a matter of moving the timings around once the
+          animation is finished! These steps took me a surprisingly long time,
+          especially listening to the MINUTES of each characters' different
+          sounds and organizing them based on what it sounded like to me/what I
+          will use it for, and then trying to find ones that fit the scene. I
+          would have liked for more sounds from the werewolf voice actor, so I
+          might ask if that is possible for the final sound design.
+          <br />
+          <br />
+          I then worked on the intro, trying my best to create a lonely
+          atmosphere, and focusing on the breaths of the werewolf, as well as
+          the wind. I used reverb to achieve this:
+          <br />
+          <br />
+          <img src="photos/week6/reverb.png" alt="" />
+          <br />
+          <br />
+          And I automated this reverb so when the camera zoomed out on the
+          werewolf laying down, the size and dry/wet ratio would go higher to
+          get that sense of vastness. I also made it so at the start, the breath
+          and sounds were mono, and as the reverb automates to get larger, the
+          stereo width gets wider!
+          <br />
+          <br />
+          <img src="photos/week6/automation.png" alt="" />
+          <br />
+          <br />
+          I then made a reverb bus, and put all my tracks to have varying levels
+          of reverb, including the girl's and werewolf's sounds for later in the
+          animation. After this I also added some diegetic sound like crows, and
+          birds chirping, as well as wind and grass/leaves rustling. This set me
+          up to create the ambience and non-diegetic sounds next week!
+          <br />
+          <br />
+          Other than working on The Hollow Child, I also followed up with my
+          other projects, and am waiting to get more scenes to do sound design
+          for The Reconnect! The animator said she would get them to me by the
+          end of the week! I also started to master and mix some of my song that
+          I made, as well as finalized the structure since I wasn't a fan of it
+          before! I want to add a guitar solo to it!
+        </p>
+      </div>
+    </details>
+
+    <!-- ------------------------------------ BREAK WEEK ---------------------------------------------- -->
+
+    <details class="week" id="break-week">
+      <summary>Mid Sem Break</summary>
+      <div class="week-content">
+        <h3>Reflection</h3>
+        <p>...</p>
+        <h3>Academic Research</h3>
+        <p>...</p>
+        <h3>Artistic Research</h3>
+        <p>...</p>
+        <h3>Technical Research</h3>
+        <p>...</p>
+        <h3>Progress Report</h3>
+        <p>...</p>
       </div>
     </details>
 
