--- a/index.html
+++ b/index.html
@@ -1298,10 +1298,10 @@
       </div>
     </details>
 
-    <!-- ------------------------------------ BREAK WEEK ---------------------------------------------- -->
+    <!-- ------------------------------------ WEEK 7 ---------------------------------------------- -->
 
     <details class="week" id="break-week">
-      <summary>Mid Sem Break</summary>
+      <summary>Week 7</summary>
       <div class="week-content">
         <h3>Reflection</h3>
         <p>...</p>
@@ -1312,7 +1312,118 @@
         <h3>Technical Research</h3>
         <p>...</p>
         <h3>Progress Report</h3>
-        <p>...</p>
+        <p>
+          This week included a lot because I'm also counting the break week! I
+          was also thinking of dropping the music video project because things
+          have come up unexpectedly and I still believe that I can hit the 100
+          hour mark even without it, considering how much work I've done so far.
+          This was a mix between the videographer pulling out, and me being
+          unable to do a Pharos project because of how late I was given notice.
+          If I have time, I might do the music video myself since I already the
+          song worked on, but it really depends on time in regards to making the
+          music video myself.
+          <br />
+          <br />
+          For the projects I am continuing to pursue, I mainly did a lot of work
+          for The Hollow Child since the deadline was closer compared to the
+          other projects.
+          <br />
+          <br />
+          I also started to do work on Fired Before Hired, the game I am doing
+          the sound design for. I started with doing the menu music! I gave the
+          main game designer a few different clips of different videos to see
+          what his vision of what "Office Music" sounded like. This ranged from
+          jazz, elevator music, waiting room music, etc. What resonated with him
+          the most actually ended up being this waiting room music that had a
+          bossa nova vibe to it, so that was the direction I wanted to head
+          towards.
+          <br />
+          <br />
+          I usually think of either a soft electric piano or a classical guitar
+          for the main chords of a bossa nova song, so I started with looking
+          for classical guitar loops on Splice. I would have done it myself but
+          I actually don't have a very good mic to capture the sound of a guitar
+          and not a lot of quiet areas in my house, and most of the recordings
+          of guitar I do are through an audio interface with an electric guitar.
+          <br />
+          <br />
+          Anyways, I found this classical guitar loop playing different chords
+          in D minor and I loved it immediately! The artist actually played a
+          piano version but I liked the guitar so much more. I imported that
+          into Ableton and got my MIDI keyboard and used a soft electric piano
+          sound and played around with what chords I wanted to play on top of
+          it. I put a lot of focus into making it very soft, so it supports the
+          guitar in the background, rather than trying to overpower it because I
+          wanted the guitar to be the main focus. I just did a basic 4 chord
+          structure and looped it.
+          <br />
+          <br />
+          Then after that I noodled around with a vibraphone and came up with a
+          simple melody. Since I was aiming for kind of elevator music, I
+          thought it'd be fitting to go up and down the notes in the key and the
+          simplicity helps it pass as like waiting room/office music.
+          <br />
+          <br />
+          I thought it needed some percussion so I spent quite a while trying to
+          search for one that fit the vibe, and I eventually found one! I added
+          some maraccas and a tambourine as well to make it fit better with the
+          waiting room theme, the percussion was very light and friendly and
+          playful, which was exactly the vibe I was going for! Everything I just
+          talked about can be seen here
+          <br />
+          <br />
+          <img src="photos/week7/1.png" alt="" />
+          <br />
+          <br />
+          While I was seacrhing for the percussion, I also found this horn
+          sample that I really liked. I was drawn to it for some reason. I added
+          it in and asked the game developer if he liked it and he actually
+          really liked it and said it was "fire" (his words)! Even though its
+          not typical for waiting room music or anything, I think it added to
+          the jazzy bossa nova vibe and gave the sound a bit of texture.
+          <br />
+          <br />
+          After this I then started cutting up everything into 3 sections; the
+          intro, main loop, and end. Since it is a song for a game, I need to be
+          able to have 3 clips of it so I could code that the intro plays, then
+          straight after the main loop plays for however long, and then it ends.
+          For the intro, I took an open high hat sound and reversed it to work
+          as a riser for the start of the percussion part. You can see me do
+          this here:
+          <br />
+          <br />
+          <img src="photos/week7/2.png" alt="" />
+          <br />
+          <br />
+          Now that I had all of the parts done, it was just a matter of actually
+          assembling the song. I didn't want all of them to play at the same
+          time since it makes for a very flat song, theres no variation and
+          won't be very interesting. I decided that the main rhythm, which was
+          the classical guitar actually doing the bossa nova, would play
+          throughout, and the rest would change/get cut off, etc.
+          <br />
+          <br />
+          When the horns were palying, I felt like there was a lot going on, so
+          I decided for a part of it, the percussion would stop, highlighting
+          the horns and the rhythm, then come back. This part turned out to be
+          my favorite part of the entire menu music song! After the horns, I
+          felt like the main melody was just being repeated, so I kind of wanted
+          to add like a 'bridge' or a B section, but wanted to keep it simple as
+          it was just a short loopable song. I just decided to do a little play
+          around with the melody, so at least there was some melodic difference
+          between that section, and the rest of the song!
+          <br />
+          <br />
+          Then that was done for the menu music! I exported a version where it
+          was the intro, main loop twice, then outro so I could gather feedback
+          with the song as a whole. The developer absolutely loved it so I'm
+          very happy. You can see all the final parts here (I removed the horns
+          for some of the parts, but the screenshot is outdated, but everything
+          else is right):
+          <br />
+          <br />
+          <img src="photos/week7/3.png" alt="" />
+        </p>
       </div>
     </details>
 
